Slim down network + java guides — 핵심만 유지
너무 깊었던 deep-dive 본문을 각 챕터 400~500 라인 수준으로 압축. 핵심 개념 + 1~2개 다이어그램 + 운영 시나리오 2~3개 + 꼬리질문 3~5개만 유지. 부록/byte-level/풀 시퀀스/풀 시나리오 매트릭스는 git 7e4a6c8 commit에 보존(deep-dive 풀버전 16,283 + 7,698 lines).

network-request-lifecycle (16,283 → 4,019 lines, -75%):
- 01 url 직렬화 3026 → 500
- 02 dns/routing 2391 → 503
- 03 osi/tcp/tls 2289 → 503
- 04 load balancer 1206 → 508
- 05 nginx 1410 → 508
- 06 tomcat 1496 → 494
- 07 connection pools 1867 → 503
- 08 jdbc/db 2161 → 500

java-deep-dive (7,698 → 2,226 lines, -71%):
- 01 generics 1147 → 406
- 02 reflection 1171 → 409
- 03 threads 1775 → 511
- 04 timeouts 1336 → 401
- 05 hashing 2269 → 499

두 README도 챕터 표/진행 현황 라인 수 갱신 + "deep-dive는 git 7e4a6c8 참조" 안내.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>